# zuu

./: .gitignore  CMakeLists.txt  LuminanceColormap.hpp  compile.sh  main.cpp  make_segments.hpp  readme.md  start.cu
legacy/: LuminanceColormap.cpp  make_image.cpp  make_image.hpp  make_segments.cpp  produce_image.cpp  produce_image.hpp
python_orig/: explanation.md  luminanceColormap.md  make_image.py  make_segments.py  make_segments_all.md  produce_image.py  prototype.py
